--- a/src/documents/elements/spinner-spiral/spinner-spiral.css.scss
+++ b/src/documents/elements/spinner-spiral/spinner-spiral.css.scss
@@ -12,8 +12,8 @@ $lapDuration: 3s;
 .spinner {
   display: inline-block;
   position: relative;
-  width: 500px;
-  height: 500px;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   background: black;
 }
@@ -36,11 +36,6 @@ i {
   opacity: 0;
   background: rgba(255,255,255,0.5);
   box-shadow: 0px 0px 10px rgba(255,255,255,1);
-
-  animation-name: spin;
-  animation-duration: $lapDuration;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
 }
 
 @for $i from 1 through $particles {
@@ -52,6 +47,7 @@ i {
       translate3d( #{$radius}px, 0, 0 )
     );
 
+    animation: spin 3s ease-in-out infinite;
     animation-delay: $i * ($lapDuration / $particles);
   }
 }
